log/build_2025-03-29_15-44-55/pathplanning/stderr.log
  File "/home/prethivi/ros2_ws/pathplanning/install/pathplanning/lib/python3.10/site-packages/pathplanning/pathplanning.py", line 176
    self.
         ^
SyntaxError: invalid syntax

